crates/ruff_python_parser/tests/snapshots/invalid_syntax@statements__assignment_missing_target.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/statements/assignment_missing_target.py
---
## AST

 ```
Module(
    ModModule {
        range: 0..19,
        body: [
            Assign(
                StmtAssign {
                    range: 0..7,
                    targets: [
                        Name(
                            ExprName {
                                range: 0..1,
                                id: "a",
                                ctx: Store,
                            },
                        ),
                        Name(
                            ExprName {
                                range: 3..3,
                                id: "",
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        ExprName {
                            range: 6..7,
                            id: "c",
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    range: 9..14,
                    value: BinOp(
                        ExprBinOp {
                            range: 9..14,
                            left: Name(
                                ExprName {
                                    range: 9..10,
                                    id: "a",
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                ExprName {
                                    range: 13..14,
                                    id: "b",
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a = = c
  |     ^ Syntax Error: Expression expected.
2 | 
3 | a + b
  |



